# WebRTC_practice

./: .gitmodules  CMakeLists.txt  FindGStreamer.cmake  LICENSE  README.md  index.html
Video_only_demo/: index.html  index.js
include/: gst_simplewebrtc.hpp
src/: gst_simplewebrtc.cpp  main.cpp
